--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -75,8 +75,14 @@ input:valid ~ label {
   position: absolute;
   right: 8px;
   color: #000000;
-  font-size: 1.2em;
+  font-size: 1.7em;
   top: 20px;
+}
+
+ion-icon{
+  position : absolute;
+  font-size: 1.3em;
+
 }
 
 .forget {
