--- a/frontend/src/components/Booking.css
+++ b/frontend/src/components/Booking.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-.main_container{
+.main_container_booking{
     height: 100vh;
     width: 100vw;
     display: flex;
