--- a/frontend/src/components/Profile.css
+++ b/frontend/src/components/Profile.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-.main_container{
+.main_container_profile{
     height: 100vh;
     width: 100vw;
     display: flex;
