--- a/frontend/src/components/Booking.css
+++ b/frontend/src/components/Booking.css
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #a2b7b2;
+    background-color: #ffffff;
     padding-top: 5rem;
 } 
 
