--- a/frontend/src/components/Feedback.css
+++ b/frontend/src/components/Feedback.css
@@ -5,14 +5,13 @@
 }
 
 .feedback{
-    background-color: black;
     height: 100vh;
     width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
     padding-top: 3rem;
-    background-color: #a2b7b2;
+    background-color: #ffffff;
 }
 
 .card{
