--- a/frontend/src/components/Booking.css
+++ b/frontend/src/components/Booking.css
@@ -10,7 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #ffffff;
+  background-color: #a2b7b2;
   padding-top: 5rem;
 }
 
