--- a/frontend/src/components/Feedback.css
+++ b/frontend/src/components/Feedback.css
@@ -11,7 +11,7 @@
   justify-content: center;
   align-items: center;
   padding-top: 3rem;
-  background-color: #ffffff;
+  background-color: #a2b7b2;
 }
 
 .card {
