--- a/frontend/src/components/Home.css
+++ b/frontend/src/components/Home.css
@@ -7,14 +7,16 @@
 }
 
 .main_container {
-  height: 100vh;
-  width: 100vw;
-  /* background: url(./Frame-1.jpeg); */
-  background-color: none;
+  min-height: 100vh;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 .container1 {
-  height: 100%;
+  width: 100%;
+  min-height: 100vh;
+  position: relative;
+  overflow-x: hidden;
 }
 
 #background_home {
@@ -22,12 +24,12 @@
   height: 100%;
   position: absolute;
   z-index: -1;
+  object-fit: cover;
 }
 
 #gaddi {
   position: absolute;
-  /* width: 30rem; */
-  width: 40rem;
+  width: min(40rem, 90%);
   right: 2rem;
   bottom: 12rem;
   animation: car_transition;
@@ -137,11 +139,12 @@
 }
 
 .aboutus {
+  width: 100%;
   background-color: #eaf0ee;
-  /* height: 40rem; */
   display: flex;
   font-family: "Inter", sans-serif;
   padding-bottom: 3rem;
+  overflow-x: hidden;
 }
 
 #rec {
@@ -197,15 +200,14 @@
   #gaddi {
     position: static;
     bottom: 0;
-    width: 25rem;
+    width: min(25rem, 90%);
+    margin: 0 auto;
   }
 
   .content_home {
-    width: 80%;
-    margin: 0;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+    width: 90%;
+    margin: 0 auto;
+    padding: 0 1rem;
   }
 }
 
@@ -280,4 +282,8 @@
   .left {
     width: 80%;
   }
+}
+
+#root {
+  overflow-x: hidden;
 }
