--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,18 +6,31 @@
 }
 
 section {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
   width: 100%;
-  background: url("./Login_bg_image.jpg") no-repeat;
+}
+
+section::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url("./freepik__modern-style-detailled-illustration-image-of-parke__13768.jpeg") no-repeat;
   background-position: center;
   background-size: cover;
+  opacity: 0.9;
+  z-index: 0;
 }
 
 .form-box {
   position: relative;
+  z-index: 1;
   width: 400px;
   height: 450px;
   background: transparent;
