--- a/frontend/src/components/Booking.css
+++ b/frontend/src/components/Booking.css
@@ -11,13 +11,16 @@
   justify-content: center;
   align-items: center;
   background-color: #a2b7b2;
-  padding-top: 5rem;
+  padding-top: 9rem;
 }
 
 .card {
+
   animation: book_Now;
   animation-duration: 1.5s;
   animation-timing-function: ease;
+  height: 100%;
+  width: 40rem;
 }
 
 @keyframes card_ani {
@@ -28,4 +31,27 @@
   100% {
     opacity: 1;
   }
+}
+
+@media only screen and (max-width: 1024px) {
+  
+  .card{
+    width: 70%;
+  }
+  
+}
+
+
+@media only screen and (max-width: 600px) {
+
+  .main_container_booking {
+    height: 100vh;
+    padding-bottom: 2rem;
+   
+  }
+
+  .card{
+    width: 95%;
+  }
+
 }
