--- a/frontend/src/components/Home.css
+++ b/frontend/src/components/Home.css
@@ -85,7 +85,7 @@
   height: 50vh;
   margin-top: 9.5vh;
   margin-left: 5vw;
-  color: rgb(81, 78, 78);
+  color: var(--text-primary);
   display: flex;
   flex-direction: column;
 }
@@ -112,11 +112,11 @@
 }
 
 .booknow {
-  background-color: #65b0b3;
+  background-color: var(--text-secondary);
   border: none;
-  border-radius: 0.5vw;
+  border-radius: var(--radius);
   padding: 2vh 4vw;
-  color: white;
+  color: var(--text-primary);
   font-size: clamp(1rem, 1.3vw, 1.5rem);
   margin-top: 3vh;
   width: fit-content;
@@ -133,7 +133,7 @@
 
 .aboutus {
   width: 100vw;
-  background-color: #eaf0ee;
+  background-color: var(--background-primary);
   display: flex;
   font-family: "Inter", sans-serif;
   padding: 5vh 0;
