--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -15,13 +15,14 @@ section {
 }
 
 section::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: url("/freepik__modern-style-detailled-illustration-image-of-parke__13768.jpeg") no-repeat;
+  background: url("/freepik__modern-style-detailled-illustration-image-of-parke__13768.jpeg")
+    no-repeat;
   background-position: center;
   background-size: cover;
   opacity: 0.9;
